Script steps: composer, test.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ php:
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 script: 
   - sh bin/install-wp-tests.sh  sptestdatabase root ''
+  - composer update
+  - bash test.sh
