--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ php:
   - 7.3
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 script: 
-  - sh bin/install-wp-tests.sh  sptestdatabase root ''
+  - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
   - bash test.sh
