--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: php
 php:
+  - 7.1
+  - 7.2
   - 7.3
+  - 7.4
+  - 5.4 #Drop it??
+  - 5.6
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 script:
-  - git clone --depth=50 --branch=master git@github.com:short-pixel-optimizer/plugin-modules.git modules
+  - git clone --depth=50 --branch=master https://d33e6cee6cd28c6e717d554c176008978aa5db62@github.com/short-pixel-optimizer/plugin-modules.git modules
   - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
   - bash test.sh
