--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
   - 5.6
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 script:
-  - git clone --depth=50 --branch=master https://bf95ee9b6c2b84f70ea9973aec41812258142954@github.com/short-pixel-optimizer/plugin-modules.git modules
+  - git clone --depth=50 --branch=master git@github.com:short-pixel-optimizer/plugin-modules.git modules
   - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
   - bash test.sh
