--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ php:
   - 5.4 #Drop it??
   - 5.6
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
-script:
+before_script:
   - git clone --depth=50 --branch=master git@github.com:short-pixel-optimizer/plugin-modules.git modules
+script:
   - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
   - bash test.sh
