--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
   - 5.6
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 before_script:
-  - git clone --depth=50 --branch=master git@github.com:short-pixel-optimizer/plugin-modules.git modules
+  - git clone --depth=50 --branch=master https://github.com/short-pixel-optimizer/plugin-modules.git modules
 script:
   - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
