--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,16 @@
     },
     "require-dev": {
 	"phpunit/phpunit": "^7",
-	"mikey179/vfsstream": "^1"
-   },
+	"mikey179/vfsstream": "^1",
+      "lucatume/wp-browser": "^2.5",
+      "codeception/module-asserts": "^1.0",
+    "codeception/module-phpbrowser": "^1.0",
+    "codeception/module-webdriver": "^1.0",
+    "codeception/module-db": "^1.0",
+    "codeception/module-filesystem": "^1.0",
+    "codeception/module-cli": "^1.0",
+    "codeception/util-universalframework": "^1.0"
+    },
    "autoload": {
        "psr-4": { "ShortPixel\\" : "class" }
    },
