--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ php:
   - 7.2
   - 7.3
   - 7.4
-  - 5.4 #Drop it??
   - 5.6
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 before_script:
-  - git clone --depth=50 --branch=master https://shortpixel-travis-user:SP_Password_2019@github.com/short-pixel-optimizer/plugin-modules.git modules 
+  - git clone --depth=50 --branch=master https://shortpixel-travis-user:4cca7a1d5dfc8238da109a629cc882b163f30c4d@github.com/short-pixel-optimizer/plugin-modules.git modules
 script:
   - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
