All test cases run. Example Unit test generated, Acceptance test generated. Removed clutter files

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -23,6 +23,7 @@ modules:
             cleanup: true
             waitlock: 10
             url: '%TEST_SITE_WP_URL%'
+#            originalURL: '%TEST_SITE_WP_URL%'
             urlReplacement: true #replace the hardcoded dump URL with the one above
             tablePrefix: '%TEST_SITE_TABLE_PREFIX%'
         WPBrowser:
