--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
     ],
     "require": {
         "shortpixel/notices":">=1.3",
-        "shortpixel/build" : "@dev"
+        "shortpixel/build" : "@dev", 
+	"shortpixel/shortq": ">=1.0"
     },
     "require-dev": {
 	"phpunit/phpunit": "^7",
-	"mikey179/vfsstream": "^1"
+	"mikey179/vfsstream": "^1",
+        "10up/wp_mock": "0.4.2"
    },
    "autoload": {
        "psr-4": { "ShortPixel\\" : "class" }
