--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,11 @@
 	>
 	<testsuites>
 		<testsuite name="fileSystem">
-			<directory prefix="test-" suffix=".php">./tests/</directory>
+			<directory prefix="test-" suffix=".php">./tests/filesystem</directory>
 		</testsuite>
+		<testsuite name="imageModel">
+			<directory prefix="test-" suffix=".php">./tests/image</directory>
+		</testsuite>
+		
 	</testsuites>
 </phpunit>
