--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ php:
 services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
 script:
   - mkdir ../modules
-  - curl -sL -H "Authorization: token 83fa93b864843c9b5b544579352b1d116a8851a7" https://api.github.com/repos/short-pixel-optimizer/plugin-modules/tarball | tar -xzf - && cp -r short-pixel-optimizer-plugin-modules*/ ../modules 
+  - curl -sL -H "Authorization: token 83fa93b864843c9b5b544579352b1d116a8851a7" https://api.github.com/repos/short-pixel-optimizer/plugin-modules/tarball | tar -xzf -
+  - cp -r short-pixel-optimizer-plugin-modules*/ ../modules 
   - bash bin/install-wp-tests.sh  sptestdatabase root ''
   - composer update
   - bash test.sh
