--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ php:
   - 7.2
   - 7.3
   - 7.4
-#  - 5.6 No support for 5.6. PHPUnit 5.6 is not found on Travis machines. PHPUnit5 is no longer supported TODO Remove this line
-services: mysql # Credentials for mysql based on the documentation https://docs.travis-ci.com/user/database-setup/#mysql
+services: mysql
 script:
  - git clone --depth=50 --branch=master $REPO  ../modules
  - bash bin/install-wp-tests.sh  sptestdatabase root ''
