--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - 7.4
 services: docker
 script:
+  - docker login
   - docker run -h localhost -P 3306 --protocol=tcp -u root -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdbsocket -v "/root/wordpress/database-4":/var/lib/mysql -d  mariadb
   - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "/root/wordpress/html":/var/www/html -d wordpress
   - bash bin/install-wp-tests.sh  wordpress_test root '$DOCKER_DB_PASSWORD' 127.0.0.1
