--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,11 @@ php:
 services: docker
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker run -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "/root/wordpress/database-4":/var/lib/mysql -d  mariadb
-  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "/root/wordpress/html":/var/www/html -d wordpress
-  - bash bin/install-wp-tests.sh  wordpress_test root '$DOCKER_DB_PASSWORD' 127.0.0.1
+  - mkdir ~/wordpress/database ~/wordpress/html
+  - docker run -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "~/wordpress/database":/var/lib/mysql -d  mariadb
+  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "~/wordpress/html":/var/www/html -d wordpress
   - git clone --depth=50 --branch=master $UGAN  ../modules
-  - bash bin/install-wp-tests.sh  sptestdatabase root '$DOCKER_DB_PASSWORD'
   - composer update
-  - bash test.sh
   - vendor/bin/codecept run
 env:
   global:
