--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
 services: docker
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - mkdir ~/wordpress/database ~/wordpress/html
+  - mkdir ~/wordpress/database ~/wordpress/html -p
   - docker run -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "~/wordpress/database":/var/lib/mysql -d  mariadb
   - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "~/wordpress/html":/var/www/html -d wordpress
   - git clone --depth=50 --branch=master $UGAN  ../modules
