Wrong database name, wrong admin username

--- a/.env.testing.sample
+++ b/.env.testing.sample
@@ -4,15 +4,15 @@ TEST_SITE_DB_NAME=wordpress
 TEST_SITE_DB_USER=root
 TEST_SITE_DB_PASSWORD=Password_2019
 TEST_SITE_TABLE_PREFIX=wp_
-TEST_SITE_ADMIN_USERNAME=admin
+TEST_SITE_ADMIN_USERNAME=farterazvan
 TEST_SITE_ADMIN_PASSWORD=Password_2019
 TEST_SITE_WP_ADMIN_PATH=/wp-admin
 WP_ROOT_FOLDER=/tmp/wordpress/html
-TEST_DB_NAME=test
+TEST_DB_NAME=tests
 TEST_DB_HOST=127.0.0.1:3306
 TEST_DB_USER=root
 TEST_DB_PASSWORD=Password_2019
 TEST_TABLE_PREFIX=wp_
-TEST_SITE_WP_URL=localhost:80
-TEST_SITE_WP_DOMAIN=localhost:80
+TEST_SITE_WP_URL=http://localhost:80
+TEST_SITE_WP_DOMAIN=http://localhost:80
 TEST_SITE_ADMIN_EMAIL=admin@localhost
