--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ php:
 services: docker
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - mkdir /tmp/wordpress/database /tmp/wordpress/html -p
-  - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "/tmp/wordpress/database":/var/lib/mysql -d  mariadb
-  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "/tmp/wordpress/html":/var/www/html -d wordpress
+  - mkdir /tmp/docker-wordpress/database /tmp/docker-wordpress/html -p
+  - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "/tmp/docker-wordpress/database":/var/lib/mysql -d  mariadb
+  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "/tmp/docker-wordpress/html":/var/www/html -d wordpress
   - git clone --depth=50 --branch=master $UGAN  ../modules
-  - bash bin/install-wp-tests.sh wordpress root '$DOCKER_DB_PASSWORD'
+#  - bash bin/install-wp-tests.sh wordpress root '$DOCKER_DB_PASSWORD' TODO Install in  a new folder /tmp/wordpress or in docker-wordpress volume; Configure wp-config
   - composer update
   - bash test.sh
