--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ script:
   - git clone --depth=50 --branch=master $UGAN  ../modules
 #  - bash bin/install-wp-tests.sh wordpress root '$DOCKER_DB_PASSWORD' TODO Install in  a new folder /tmp/wordpress or in docker-wordpress volume; Configure wp-config
   - composer update
-  - cp . /tmp/docker-wordpress/wp-plugins/shortpixel-image-optimiser/ -r
+  - cp . /tmp/docker-wordpress/html/wp-content/plugins/shortpixel-image-optimiser/ -r
 #  - bash test.sh
-  - vendor/bin/codecept run acceptance
+#  - vendor/bin/codecept run acceptance #TODO No tests defined. Acceptance folder is not visible on remote git
   - vendor/bin/codecept run functional
   - vendor/bin/codecept run unit
 #  - vendor/bin/codecept run wpunit TODO Needs fixing. "Test" db install, "PHP Warning:  Cannot modify header information - headers already sent by"
