--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,11 @@ script:
   - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "/tmp/docker-wordpress/database":/var/lib/mysql -d  mariadb
   - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "/tmp/docker-wordpress/html":/var/www/html -d wordpress
   - git clone --depth=50 --branch=master $UGAN  ../modules
-#  - bash bin/install-wp-tests.sh wordpress root '$DOCKER_DB_PASSWORD' TODO Install in  a new folder /tmp/wordpress or in docker-wordpress volume; Configure wp-config
   - composer update
-  - cp . /tmp/docker-wordpress/html/wp-content/plugins/shortpixel-image-optimiser/ -r
-#  - bash test.sh
+  - sudo cp . /tmp/wordpress/wp-content/plugins/shortpixel-image-optimiser/ -r
 #  - vendor/bin/codecept run acceptance #TODO No tests defined. Acceptance folder is not visible on remote git
   - vendor/bin/codecept run functional
   - vendor/bin/codecept run unit
 #  - vendor/bin/codecept run wpunit TODO Needs fixing. "Test" db install, "PHP Warning:  Cannot modify header information - headers already sent by"
-#  - ./vendor/bin/phpunit --verbose
+  - bash bin/install-wp-tests.sh wordpress root $DOCKER_DB_PASSWORD localhost latest true # TODO Install in  a new folder /tmp/wordpress or in docker-wordpress volume; Configure wp-config
+  - ./vendor/bin/phpunit --verbose
