--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ php:
 services: docker
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - mkdir /tmp/docker-wordpress/database /tmp/docker-wordpress/html -p
-  - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=wordpress --name wordpressdb -v "/tmp/docker-wordpress/database":/var/lib/mysql -d  mariadb
-  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link wordpressdb:mysql -p 80:80 -v "/tmp/docker-wordpress/html":/var/www/html -d wordpress
+  - mkdir $WP_PATH/database -p
+  - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=$WP_DB --name $DOCKER_DB_NAME -v $WP_PATH/database:/var/lib/mysql -d  mariadb
+  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link $DOCKER_DB_NAME:mysql -p 80:80 -v $WP_PATH:/var/www/html -d wordpress
   - git clone --depth=50 --branch=master $UGAN  ../modules
   - composer update
   - sudo cp . /tmp/wordpress/wp-content/plugins/shortpixel-image-optimiser/ -r
@@ -19,5 +19,10 @@ script:
   - vendor/bin/codecept run functional
   - vendor/bin/codecept run unit
 #  - vendor/bin/codecept run wpunit TODO Needs fixing. "Test" db install, "PHP Warning:  Cannot modify header information - headers already sent by"
-  - bash bin/install-wp-tests.sh wordpress root $DOCKER_DB_PASSWORD 127.0.0.1 latest true # TODO Install in  a new folder /tmp/wordpress or in docker-wordpress volume; Configure wp-config
+  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true # TODO Install in  a new folder /tmp/wordpress or in docker-wordpress volume; Configure wp-config
   - ./vendor/bin/phpunit --verbose
+env:
+  global:
+    - WP_PATH=/tmp/wordpress
+    - WP_DB=wordpress
+    - DOCKER_DB_NAME=wordpressdb
