--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,18 @@ php:
 services: docker
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - mkdir $WP_PATH/database -p
+  - mkdir $WP_PATH $WP_PATH/database -p
   - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=$WP_DB --name $DOCKER_DB_NAME -v $WP_PATH/database:/var/lib/mysql -d  mariadb
   - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link $DOCKER_DB_NAME:mysql -p 80:80 -v $WP_PATH:/var/www/html -d wordpress
   - git clone --depth=50 --branch=master $UGAN  ../modules
   - composer update
-  - sudo cp . /tmp/wordpress/wp-content/plugins/shortpixel-image-optimiser/ -r
+  - sudo cp . $WP_PATH/wp-content/plugins/shortpixel-image-optimiser/ -r
   - vendor/bin/codecept run functional
   - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true
   - sudo ./vendor/bin/phpunit --verbose
 env:
   global:
-    - WP_PATH=/tmp/wordpress
+    - WP_PATH=/home/travis/wordpress
     - WP_DB=wordpress
     - DOCKER_DB_NAME=wordpressdb
+    - TMPDIR=$WP_PATH
