--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,9 @@
 		<testsuite name="imageModel">
 			<directory prefix="test-" suffix=".php">./tests/image</directory>
 		</testsuite>
+		<testsuite name="queue">
+			<directory prefix="test-" suffix=".php">./tests/queue</directory>
+		</testsuite>
 		
 	</testsuites>
 </phpunit>
