--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -8,7 +8,7 @@ modules:
     enabled:
         - WPDb
         - WPBrowser
-        # - WPFilesystem
+        - WPFilesystem
         - Asserts
         - \Helper\Functional
     config:
@@ -31,7 +31,6 @@ modules:
             headers:
                 X_TEST_REQUEST: 1
                 X_WPBROWSER_REQUEST: 1
-
         WPFilesystem:
             wpRootFolder: '%WP_ROOT_FOLDER%'
             plugins: '/wp-content/plugins'
