--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ script:
   - COMPOSER=composer-testing.json composer update
   - sudo cp . $WP_PATH/wp-content/plugins/shortpixel-image-optimiser/ -r
   - vendor/bin/codecept run functional
-  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true
-  - ./vendor/bin/phpunit --verbose
+#  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true
+#  - ./vendor/bin/phpunit --verbose
 env:
   global:
     - WP_PATH=/home/travis/wordpress
