--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     ],
     "require": {
         "shortpixel/notices":">=1.3",
-        "shortpixel/build" : "@dev",
-        "lucatume/function-mocker-le": "^1.0"
+        "shortpixel/build" : "@dev"
     },
     "require-dev": {
 	"phpunit/phpunit": "^7",
 	"mikey179/vfsstream": "^1",
-      "lucatume/wp-browser": "^2.5",
+      "lucatume/function-mocker-le": "^1.0.1",
+      "lucatume/wp-browser": ">=2.6.10",
       "codeception/module-asserts": "^1.0",
     "codeception/module-phpbrowser": "^1.0",
     "codeception/module-webdriver": "^1.0",
