--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -11,6 +11,7 @@ modules:
         - WPDb
         - WPBrowser
         - WPFilesystem
+#        - WPWebDriver #TODO Needs selenium server installed - Cannot use both WPBrowser and WPWebDriver at same time, need different suite
         - Asserts
         - \Helper\Acceptance
     config:
@@ -36,6 +37,18 @@ modules:
             headers:
                 X_TEST_REQUEST: 1
                 X_WPBROWSER_REQUEST: 1
+        WPWebDriver:
+            url: '%TEST_SITE_WP_URL%'
+            adminUsername: '%TEST_SITE_ADMIN_USERNAME%'
+            adminPassword: '%TEST_SITE_ADMIN_PASSWORD%'
+            adminPath: '%TEST_SITE_WP_ADMIN_PATH%'
+            browser: chrome
+            host: localhost
+            port: 4444
+            window_size: false #disabled for Chrome driver
+            capabilities:
+              chromeOptions:
+                args: ["--headless", "--disable-gpu", "--proxy-server='direct://'", "--proxy-bypass-list=*"]
         WPFilesystem:
             wpRootFolder: '%WP_ROOT_FOLDER%'
             plugins: '/wp-content/plugins'
