--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ script:
 #  - ./vendor/bin/phpunit --verbose
 
 cache:
-  - vendor
-  - $HOME/.composer/cache
+  - directories:
+      - vendor
+      - $HOME/.composer/cache
 
 env:
   global:
