--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
   - sudo cp . $WP_PATH/wp-content/plugins/shortpixel-image-optimiser/ -r
   - vendor/bin/codecept run --verbose functional
   - wget https://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar &> /dev/null
+  - wget https://chromedriver.storage.googleapis.com/85.0.4183.87/chromedriver_win32.zip && unzip chromedriver_win32.zip
   - java -jar selenium-server-standalone-3.141.59.jar &
   - sleep 20s
   - vendor/bin/codecept run --verbose acceptance
