--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -36,10 +36,10 @@ modules:
             browser: chrome
             host: localhost
             port: 4444
-#            window_size: false #disabled for Chrome driver
-#            capabilities:
-#              chromeOptions:
-#                args: ["--headless", "--disable-gpu", "--proxy-server='direct://'", "--proxy-bypass-list=*"]
+            window_size: false #disabled for Chrome driver
+            capabilities:
+              chromeOptions:
+                args: ["--headless", "--disable-gpu", "--proxy-server='direct://'", "--proxy-bypass-list=*"]
         WPFilesystem:
             wpRootFolder: '%WP_ROOT_FOLDER%'
             plugins: '/wp-content/plugins'
