--- a/.travis.yml
+++ b/.travis.yml
@@ -17,20 +17,19 @@ addons:
 
 before_script:
   - phpenv config-rm xdebug.ini
+  - mkdir $WP_PATH $WP_PATH/database $WP_PATH/wp-content/uploads -p
+  - sudo cp . $WP_PATH/wp-content/plugins/shortpixel-image-optimiser/ -r
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=$WP_DB --name $DOCKER_DB_NAME -v $WP_PATH/database:/var/lib/mysql -d  mariadb
+  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link $DOCKER_DB_NAME:mysql -p 80:80 -v $WP_PATH:/var/www/html -d wordpress
+  - git clone --depth=50 --branch=master $UGAN  ../modules
+  - composer update
+  - wget https://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
+  - wget https://chromedriver.storage.googleapis.com/85.0.4183.87/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && export CHROME_BIN=chromium-browser
+  - java -jar selenium-server-standalone-3.141.59.jar &
 
 script:
-  - mkdir $WP_PATH $WP_PATH/database $WP_PATH/wp-content/uploads -p
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker run -h 127.0.0.1 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DOCKER_DB_PASSWORD -e MYSQL_DATABASE=$WP_DB --name $DOCKER_DB_NAME -v $WP_PATH/database:/var/lib/mysql -d  mariadb &> /dev/null
-  - docker run -e WORDPRESS_DB_PASSWORD=$DOCKER_DB_PASSWORD --name wordpress --link $DOCKER_DB_NAME:mysql -p 80:80 -v $WP_PATH:/var/www/html -d wordpress &> /dev/null
-  - git clone --depth=50 --branch=master $UGAN  ../modules
-  - composer update &> /dev/null
-  - sudo cp . $WP_PATH/wp-content/plugins/shortpixel-image-optimiser/ -r
   - vendor/bin/codecept run --verbose functional
-  - wget https://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar &> /dev/null
-  - wget https://chromedriver.storage.googleapis.com/85.0.4183.87/chromedriver_linux64.zip &> /dev/null && unzip chromedriver_linux64.zip && export CHROME_BIN=chromium-browser
-  - java -jar selenium-server-standalone-3.141.59.jar &
-  - sleep 20s
   - vendor/bin/codecept run --verbose acceptance
 #  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true #TODO This might be broken because of &> /dev/null
 #  - ./vendor/bin/phpunit --verbose
