--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,9 @@
 		<testsuite name="queue">
 			<directory prefix="test-" suffix=".php">./tests/queue</directory>
 		</testsuite>
-		
+		<testsuite name="response">
+			<file>./tests/test-responsecontroller.php</file>
+		</testsuite>
+
 	</testsuites>
 </phpunit>
