--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ cache:
 after_failure:
   - tar -cvf test-output.tar.gz tests/_output/
   - export SSHPASS=$DEPLOY_PASS
-  - curl --insecure --location --request POST '$FW_URL'    --form 'username=$FW_USER'    --form 'password=$FW_PW'    --form 'submit=Submit'    --form 'ipaddr={SERVER_IP}'
+  - curl --insecure --location --request POST $FW_URL --form username=$FW_USER --form password=$FW_PW --form submit=Submit --form ipaddr={SERVER_IP}
   - sshpass -e scp -o stricthostkeychecking=no test-output.tar.gz $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
 
 env:
