--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
 script:
   - vendor/bin/codecept run --verbose functional
   - vendor/bin/codecept run --verbose acceptance
-  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true #TODO This might be broken because of &> /dev/null
+  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true &> /dev/null #TODO This might be broken because of &> /dev/null
   - ./vendor/bin/phpunit --verbose
 
 cache:
