--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ dist: bionic
 language: php
 
 php:
-#  - 7.1
-#  - 7.2
-#  - 7.3
+  - 7.1
+  - 7.2
+  - 7.3
   - 7.4
 
 services:
@@ -37,10 +37,10 @@ before_script:
   - sleep 10s
 
 script:
-  - vendor/bin/codecept run --verbose functional
+#  - vendor/bin/codecept run --verbose functional # TODO Implement functional suite FunctionalTester
   - vendor/bin/codecept run --verbose acceptance
-#  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true #TODO This might be broken because of &> /dev/null
-#  - ./vendor/bin/phpunit --verbose
+  - bash bin/install-wp-tests.sh $WP_DB root $DOCKER_DB_PASSWORD 127.0.0.1 latest true #TODO This might be broken because of &> /dev/null
+  - ./vendor/bin/phpunit --verbose
 
 cache:
   - directories:
