--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,13 @@ composer.lock
 .idea/spio2.iml
 .idea/vcs.xml
 .idea/phpunit.xml
-/bin/.env
+/.idea/deployment.xml
+/.idea/shortpixel-image-optimiser.iml
+/.idea/workspace.xml
+/.idea
+/bin/.
+/composer.phar
+.env.local
+/build/
+/wordpress/
+/travis_output/
