--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ before_script:
   - git clone --depth=50 --branch=master $UGAN  ../modules
   - COMPOSER=composer-testing.json composer update &> /dev/null
   - sudo cp . $WP_PATH/wp-content/plugins/shortpixel-image-optimiser/ -r
-  - sudo chmod 777 $WP_PATH/wp-content/ -R
-  - sudo chown travis:travis $WP_PATH/wp-content/ -R
+  #- sudo chmod 777 $WP_PATH/ -R
+  - sudo chown travis:travis $WP_PATH/ -R
   - wget https://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
-  - wget https://chromedriver.storage.googleapis.com/85.0.4183.87/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && export CHROME_BIN=chromium-browser
+  - wget https://chromedriver.storage.googleapis.com/LATEST_RELEASE && unzip chromedriver_linux64.zip && export CHROME_BIN=chromium-browser
   - java -jar selenium-server-standalone-3.141.59.jar &
   - sleep 10s
 
