--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_script:
   #- sudo chmod 777 $WP_PATH/ -R
   - sudo chown travis:travis $WP_PATH/ -R
   - wget https://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
-  - wget https://chromedriver.storage.googleapis.com/LATEST_RELEASE && unzip chromedriver_linux64.zip && export CHROME_BIN=chromium-browser
+  - wget https://chromedriver.storage.googleapis.com/`wget -q -O - https://chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && export CHROME_BIN=chromium-browser
   - java -jar selenium-server-standalone-3.141.59.jar &
   - sleep 10s
 
