--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "shortpixel/notices":">=1.3",
         "shortpixel/build" : "@dev",
-	"shortpixel/shortq": ">=1.0",
+				"shortpixel/shortq": ">=1.0",
+				"shortpixel/replacer": ">=1.0",
         "lucatume/function-mocker-le": "^1.0"
     },
     "require-dev": {
