A66 - Fixed conversion when status is 'waitingforProcessing' - Fixed missing bulk pointy things - Fixed thumbnails popup hides thumbs without optimization - Fixed issue with inserting records in metaDB - Fixed original image conversion

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ composer.lock
 /.idea/shortpixel-image-optimiser.iml
 /.idea/workspace.xml
 /.idea
-/bin/.
+bin/
 /composer.phar
 .env.local
 /wordpress/
