--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         "shortpixel/notices":">=1.3",
         "shortpixel/build" : "@dev",
 				"shortpixel/shortq": ">=1.0",
-				"shortpixel/replacer": ">=1.0",
-        "lucatume/function-mocker-le": "^1.0"
+				"shortpixel/replacer": ">=1.0"
     },
     "require-dev": {
 	"phpunit/phpunit": "^9",
 	"mikey179/vfsstream": "^1",
-	"10up/wp_mock": "0.4.2",
-      "yoast/phpunit-polyfills" : "1.0.3"
+	"10up/wp_mock": "@dev",
+        "phpunitgen/console": "^5.0"
+
     },
    "autoload": {
        "psr-4": { "ShortPixel\\" : "class" , "ShortPixel\\Tests\\" : "tests"}
